# dde-kwin

./: CMakeLists.txt
.pc/: applied-patches
configures/: CMakeLists.txt  kwinrc
debian/: changelog  control  dde-kwin.install
deepin-wm-dbus/: CMakeLists.txt  deepinwmfaker.cpp  deepinwmfaker.h  main.cpp
